[ RAIN-4987 RAIN-4726 ]: UI fixed pdf alignment issue by adding margin & FSM inbox issue fixed (#1211)
* RAIN-4987 inbox total now reflects the addition of pending issues only

* RAIN-4726 fixed pdf alignment issue by adding margin

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -152,11 +152,15 @@
 }
 
 .mrlg{
-  @apply mr-lg
+  @apply mr-lg;
 }
 
 .mrsm{
-  @apply mr-sm
+  @apply mr-sm;
+}
+
+.mbsm{
+  @apply mb-sm;
 }
 
 .home-link {
